--- a/УПОзн/УПОзн.vcxproj.filters
+++ b/УПОзн/УПОзн.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="list.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
+    <ClCompile Include="queue.cpp">
+      <Filter>Файлы ресурсов</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="input_functions.h">
@@ -35,10 +38,10 @@
     <ClInclude Include="functions.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="struct_results.h">
+    <ClInclude Include="list.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="list.h">
+    <ClInclude Include="queue.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
